feat: add task type analytics
